--- a/moments.html
+++ b/moments.html
@@ -26,6 +26,7 @@
     <!-- 引入jQuery -->
     <script src="https://7.url.cn/edu/jslib/jquery/1.9.1/jquery.min.js"></script>
     <!-- 页面逻辑代码 -->
+    <script src="./data.js"></script>
     <script src="./app.js"></script>
 </body>
 </html>
